tests/should_fail/use_after_try.fit
enum State { Fresh, Authed }

resource Conn<S> {
    sock: Socket,
    cleanup: force_close,
}

enum NetError { Refused }

fn connect(host: String) -> Result<Conn<Fresh>, NetError>
fn auth(c: Conn<Fresh>, creds: Credentials) -> Result<Conn<Authed>, NetError>
fn send_data(c: Conn<Fresh>, data: String) -> Result<(), NetError>

fn test(host: String, creds: Credentials, data: String) -> Result<(), NetError> {
    let c = connect(host)?
    let c2 = auth(c, creds)?
    send_data(c, data)?
    Ok(())
}
